--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safety-app",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "scripts": {
     "start": "vite",
@@ -10,20 +10,23 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
     "prettier": "2.7.1",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.9",
-    "vite-plugin-solid": "^2.2.6"
+    "tailwindcss": "^3.2.0",
+    "typescript": "^4.8.4",
+    "vite": "3.0.9",
+    "vite-plugin-solid": "^2.3.10"
   },
   "dependencies": {
-    "@thisbeyond/solid-dnd": "^0.6.1",
-    "chart.js": "^3.8.0",
-    "ky": "^0.31.0",
-    "solid-app-router": "^0.4.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@thisbeyond/solid-dnd": "^0.7.2",
+    "chart.js": "^3.9.1",
+    "ky": "^0.31.4",
+    "solid-app-router": "^0.4.2",
     "solid-chart.js": "^1.0.7",
-    "solid-js": "^1.4.4"
+    "solid-js": "^1.6.0",
+    "solid-transition-group": "^0.0.11"
   }
 }
