--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,24 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.18",
-    "prettier": "2.7.1",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4",
-    "vite": "3.0.9",
-    "vite-plugin-solid": "^2.3.10"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "prettier": "2.8.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "3.2.4",
+    "vite-plugin-solid": "^2.4.0"
   },
   "dependencies": {
+    "@solidjs/router": "^0.5.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@thisbeyond/solid-dnd": "^0.7.2",
-    "chart.js": "^3.9.1",
-    "ky": "^0.31.4",
-    "solid-app-router": "^0.4.2",
-    "solid-chart.js": "^1.0.7",
-    "solid-js": "^1.6.0",
-    "solid-transition-group": "^0.0.11"
+    "@thisbeyond/solid-dnd": "^0.7.3",
+    "chart.js": "^4.0.1",
+    "jose": "^4.11.1",
+    "ky": "^0.32.2",
+    "solid-js": "^1.6.2",
+    "solid-services": "^4.1.1",
+    "solid-transition-group": "^0.0.12"
   }
 }
