--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.hibernate.ddl-auto=update
 # Disable activation mails in a dev environment
 #app.user.activation-mail=false
+app.jwt-expiration=5
