--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,6 +26,6 @@ server {
         proxy_set_header X-Forwarded-Host  $host;
         proxy_set_header X-Forwarded-Port  $server_port;
         
-        proxy_pass http://backend/api/;
+        proxy_pass http://backend/;
     }
 }
