Update application properties

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -2,23 +2,14 @@
 spring.datasource.url=jdbc:postgresql://db:5432/safetydb
 spring.datasource.username=postgres
 spring.datasource.password=pass123
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # To stop sending exception stacktrace in response
 server.error.include-stack-trace=never
 
 logging.level.root=WARN
 
-app.user.activation-time=86400
-
 #app.signed-url-base=${PUBLIC_URL}/
-app.signed-url-base=http://safety.vandijck.xyz/
+app.signed-url-base=https://sweco-demo.dasy.app/
 
 server.address=0.0.0.0
