--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -35,25 +35,14 @@
 					<url>https://jitpack.io</url>
 				</repository>
 			</repositories>
-            <dependencies>
-				<dependency>
-					<groupId>org.xerial</groupId>
-					<artifactId>sqlite-jdbc</artifactId>
-					<version>3.30.1</version>
-					<scope>runtime</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.github.gwenn</groupId>
-					<artifactId>sqlite-dialect</artifactId>
-					<version>master</version>
-				</dependency>
-			</dependencies>
 		</profile>
 
 	</profiles>
 	<properties>
 		<java.version>17</java.version>
+		<liquibase.version>4.17.2</liquibase.version>
 		<swagger-request-validator.version>2.30.0</swagger-request-validator.version>
+		<hibernate-search-orm.version>5.11.11.Final</hibernate-search-orm.version>
 	</properties>
 
 	<dependencies>
@@ -105,7 +94,7 @@
 		<dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-search-orm</artifactId>
-            <version>5.11.10.Final</version>
+            <version>${hibernate-search-orm.version}</version>
         </dependency>
 
 <!--		<dependency>-->
@@ -147,6 +136,18 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>${liquibase.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-maven-plugin</artifactId>
+			<version>${liquibase.version}</version>
 		</dependency>
 
 		<dependency>
@@ -249,6 +250,41 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>${liquibase.version}</version>
+				<configuration>
+					<propertyFile>src/main/resources/liquibase.properties</propertyFile>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.liquibase.ext</groupId>
+						<artifactId>liquibase-hibernate5</artifactId>
+						<version>${liquibase.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.hibernate</groupId>
+						<artifactId>hibernate-core</artifactId>
+						<version>5.4.14.Final</version>
+					</dependency>
+					<dependency>
+						<groupId>org.hibernate</groupId>
+						<artifactId>hibernate-search-orm</artifactId>
+						<version>${hibernate-search-orm.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-data-jpa</artifactId>
+						<version>${project.parent.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>javax.validation</groupId>
+						<artifactId>validation-api</artifactId>
+						<version>2.0.1.Final</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
